# ical-rs

./: Cargo.toml  README.md
.github/workflows/: CICD.yml
benches/: ical_everything.rkyv  parse_benchmark.rs
examples/: ical_generator.rs  ical_parser.rs  line_reader.rs  property_parser.rs  vcard_parser.rs
src/: lib.rs  line.rs  property.rs
src/builder/: calendar.rs  event.rs  mod.rs  vcard.rs
src/builder/snapshots/: ical__builder__calendar__tests__calendar_builder-2.snap  ical__builder__calendar__tests__calendar_builder.snap
src/generator/: calendar_builder.rs  event_builder.rs  ical.rs  mod.rs  property.rs  vcard_builder.rs
src/parser/: mod.rs  property_accessor.rs  standard_property.rs
src/parser/ical/: component.rs  mod.rs
src/parser/ical/component/: alarm.rs  calendar.rs  calendar_object.rs  event.rs  freebusy.rs  journal.rs  mod.rs  timezone.rs  todo.rs
src/parser/ical/component/event/: builder.rs  fallible.rs  mod.rs  properties.rs
src/parser/property/: calscale.rs  dtend.rs  dtstamp.rs  dtstart.rs  due.rs  duration.rs  exdate.rs  mod.rs  rdate.rs  recurid.rs  version.rs
src/parser/vcard/: component.rs  mod.rs
src/types/: date.rs  dateordatetime.rs  datetime.rs  duration.rs  guess_timezone.rs  mod.rs  period.rs  timezone.rs
src/types/vcard/: mod.rs  partial_date.rs  partial_time.rs
tests/: mod.rs
tests/resources/: Recurring at 9am, third at 10am.ics  ical_events.ics  ical_events.res  ical_everything.ics  ical_example_2.res  ical_example_rrule.ics  ical_example_rrule.res  ical_example_rrule_duration.ics  ical_expand.ics  ical_expand.res  ical_freebusy.ics  ical_journals.ics  ical_journals.res  ical_multiple.ics  ical_multiple.res  ical_property.res  ical_special_symbols.ics  ical_todos.ics  ical_todos.res  o365_meeting.ics  property_error.vcf  recurring_wholeday.ics  sabre_test.ics  vcard_bday.vcf  vcard_input.vcf  vcard_invalid.vcf  vcard_lowercase.res  vcard_lowercase.vcf  vcard_parser.res  vcard_property.res
tests/snapshots/: r#mod__calendar_object__0_data@0.snap  r#mod__calendar_object__0_data@1.snap  r#mod__calendar_object__0_ics@0.snap  r#mod__calendar_object__0_ics@1.snap  r#mod__calendar_object__rrule_expansion.snap  r#mod__calendar_object__rrule_expansion@0.snap  r#mod__generator__generate_o365_test.snap  r#mod__generator__generate_o365_test.snap.new  r#mod__generator__generate_sabre_test.snap  r#mod__line__ical.snap  r#mod__line__vcard.snap  r#mod__parser__ical-2.snap  r#mod__parser__ical-3.snap  r#mod__parser__ical.snap  r#mod__parser__ical_example_1.snap  r#mod__parser__ical_example_1.snap.new  r#mod__parser__ical_example_2.snap  r#mod__parser__ical_example_2.snap.new  r#mod__parser__ical_example_events.snap  r#mod__parser__ical_example_freebusy.snap  r#mod__parser__ical_example_journals.snap  r#mod__parser__ical_example_rrule.snap  r#mod__parser__ical_example_todos.snap  r#mod__parser__ical_expand.snap  r#mod__parser__ical_export.snap  r#mod__parser__ical_multiple-2.snap  r#mod__parser__ical_multiple-3.snap  r#mod__parser__ical_multiple.snap  r#mod__parser__ical_special_symbols.snap  r#mod__parser__vcard.snap  r#mod__parser__vcard_lowercase.snap  r#mod__property__ical-10.snap  r#mod__property__ical-11.snap  r#mod__property__ical-12.snap  r#mod__property__ical-13.snap  r#mod__property__ical-15.snap  r#mod__property__ical-16.snap  r#mod__property__ical-17.snap  r#mod__property__ical-18.snap  r#mod__property__ical-19.snap  (+61 more)
