[package]
authors = ["Peltoche <dev@halium.fr>"]
categories = ["parsing"]
description = "Ical/Vcard parser for Rust"
documentation = "https://docs.rs/ical"
homepage = "https://github.com/Peltoche/ical-rs"
keywords = ["ical", "vcard", "parser"]
license-file = "./LICENSE"
name = "ical"
readme = "./README.md"
repository = "https://github.com/Peltoche/ical-rs"
version = "0.11.0"
edition = "2024"

[badges]

[badges.travis-ci]
branch = "master"
repository = "https://travis-ci.org/Peltoche/ical-rs"

[dependencies]
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"], optional = true }
chrono-tz = { version = "0.10", optional = true }
chrono = { version = "0.4", optional = true }
regex = { version = "1.11", optional = true }
lazy_static = { version = "1.5", optional = true }
itertools = "0.14"


[features]
default = ["chrono", "chrono-tz"]
serde-derive = ["serde"]
chrono-tz = ["dep:chrono-tz"]
chrono = ["dep:chrono", "dep:regex", "dep:lazy_static"]
test = []

[lib]
doc = true
name = "ical"
path = "src/lib.rs"
test = true
