[package]
authors = ["Peltoche <dev@halium.fr>"]
categories = ["parsing"]
description = "Ical/Vcard parser for Rust"
documentation = "https://docs.rs/ical"
homepage = "https://github.com/Peltoche/ical-rs"
keywords = ["ical", "vcard", "parser"]
license-file = "./LICENSE"
name = "ical"
readme = "./README.md"
repository = "https://github.com/Peltoche/ical-rs"
version = "0.11.0"
edition = "2024"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }

[badges.travis-ci]
branch = "master"
repository = "https://travis-ci.org/Peltoche/ical-rs"

[dependencies]
thiserror = "2.0"
chrono-tz = { version = "0.10", optional = true }
chrono = { version = "0.4" }
regex = { version = "1.11" }
lazy_static = { version = "1.5" }
itertools = "0.14"
rkyv = { version = "0.8", optional = true }
derive_more = { version = "2.1", features = ["display", "from", "deref", "into"] }
rrule = { version = "0.14", features = ["exrule"] }

[dev-dependencies]
insta = { version = "1.44", features = ["filters"] }
similar-asserts = "1.7"
criterion = { version = "0.8", features = ["html_reports"] }
rstest = "0.26"

[[bench]]
name = "parse_benchmark"
harness = false

[features]
default = ["chrono-tz"]
chrono-tz = ["dep:chrono-tz"]
test = []
rkyv = ["dep:rkyv"]

[lib]
doc = true
name = "ical"
path = "src/lib.rs"
test = true
